public/css/repairs/rapair.css
.input:active, .input:focus, .is-active.input, .is-active.textarea, .is-focused.input, .is-focused.textarea, .select select.is-active, .select select.is-focused, .select select:active, .select select:focus, .textarea:active, .textarea:focus {
    border-color: var(--dark-mode-sidebar-color);
    box-shadow: 0 0 0 0.125em var(--dark-mode-body-color);
}

.text-username {
    display: inline;
    font-size: 0.8rem;
}

.text-date {
    display: inline;
    font-size: 0.8rem;
}

.item-box {
    border: 1px solid #b5b5b5;
}

.item-box .in-border {
    position: absolute;
    top: -12px;
}

.item-box .item-title {
    background-color: #fff;
    padding: 0 1em;
    margin-right: 12em;
    border-radius: 10px;
    border: 1px solid #b5b5b5;
}

.header-box {
    background-color: var(--dark-mode-sidebar-color);
}

.header-box p {
    color: var(--dark-mode-text-color);
}

.send-button {
    width: 50px;
}

.messages {
    overflow-y: auto;
    max-height: 300px;
    -ms-overflow-style: none;
    scrollbar-width: none;
}

.messages::-webkit-scrollbar {
    display: none;
}

